@@ -3020,6 +3020,26 @@ make_constraint_to_anything (varinfo_t vi)
   process_constraint (new_constraint (lhs, rhs));
 }
 
+
+/* Return true if FIELDSTACK contains fields that overlap. 
+   FIELDSTACK is assumed to be sorted by offset.  */
+
+static bool
+check_for_overlaps (VEC (fieldoff_s,heap) *fieldstack)
+{
+  fieldoff_s *fo = NULL;
+  unsigned int i;
+  unsigned int lastoffset = ~0;
+
+  for (i = 0; VEC_iterate (fieldoff_s, fieldstack, i, fo); i++)
+    {
+      if (fo->offset == lastoffset)
+	return true;
+      lastoffset = fo->offset;
+    }
+  return false;
+}
+
 /* Create a varinfo structure for NAME and DECL, and add it to VARMAP.
    This will also create any varinfo structures necessary for fields
    of DECL.  */
@@ -3104,8 +3124,16 @@ create_variable_info_for (tree decl, const char *name)
 	 which will make notokay = true.  In that case, we are going to return
 	 without creating varinfos for the fields anyway, so sorting them is a
 	 waste to boot.  */
-      if (!notokay)	
-	sort_fieldstack (fieldstack);
+      if (!notokay)
+	{	
+	  sort_fieldstack (fieldstack);
+	  /* Due to some C++ FE issues, like PR 22488, we might end up
+	     what appear to be overlapping fields even though they,
+	     in reality, do not overlap.  Until the C++ FE is fixed,
+	     we will simply disable field-sensitivity for these cases.  */
+	  notokay = check_for_overlaps (fieldstack);
+	}
+      
       
       if (VEC_length (fieldoff_s, fieldstack) != 0)
 	fo = VEC_index (fieldoff_s, fieldstack, 0);
